@@ -41,6 +41,7 @@
 - add FITS reader
 - land the vector branmch ... we have SSE erode/dilate/add/conv
 - add IM_SWAP
+- dilate/erode do (!=0) on non-uchar images
 
 12/5/10 started 7.22.2
 - the conditional image of ifthenelse can be any format, a (!=0) is added if
